# blis-cloud-cli

./: .editorconfig  README.md  Vagrantfile  blis-cloud.py  bootstrap.sh  pyproject.toml
.devcontainer/: Dockerfile.jammy  devcontainer.json  on-create-command.sh
.github/: dependabot.yml
blis/: __init__.py
blis/docker/: commands.py  util.py
blis/util/: environment.py
blis_cli/: blis.py
blis_cli/commands/: docker.py  domain.py  install.py  logs.py  start.py  status.py  stop.py  update.py
blis_cli/extra/: 004-blis_127-seed.sql  docker-compose.yml
blis_cli/extra/templates/: Caddyfile.j2
blis_cli/util/: bash.py  caddy.py  config.py  docker_commands.py  docker_util.py  emoji.py  environment.py  packages.py
commands/: install.py  status.py
docs/: proposal.md
util/: emoji.py  packages.py
