[tool.poetry]
name = "blis-cli"
version = "0.0.1"
description = "Command-line tool for the BLIS web-based lab information system."
authors = ["Mitchell Rysavy <mitchell.rysavy@gmail.com>"]
readme = "README.md"
packages = [{include = "blis_cli"}]


[tool.poetry.scripts]
blis = "blis_cli.blis:main"


[tool.poetry.dependencies]
python = "^3.10"
click = "~= 8.1.7"
colorama = "~= 0.4.4"
docker = "~= 6.1.3"
psutil = "~= 5.9.0"
requests = "~= 2.31.0"
PyYAML = "~= 6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
